fixed alignment

--- a/src/app/calculadoras/calculadoras.component.scss
+++ b/src/app/calculadoras/calculadoras.component.scss
@@ -11,13 +11,16 @@ h1{
     background-color: #d1e0eb;
 }
 h2{
+  padding-left: 2%;
     font-size: 20px;
     font-size: 26px;
 }
 p{
     font-size: 16px;
+    margin-left: 2%;
+    margin-right: 2%;
 }
-
+//section one
 h3{
   padding-left: 2%;
 }
